src/header/index.scss
$bar-menu-size:60px;
$bar-padding-height:5px;
//$bar-element-height:($bar-menu-size) - ($bar-padding-height * 2);

$bar-summary-left:200px;
$bar-summary-right:200px;

@mixin shadow($level:2, $transparence1:0.14, $transparence2:0.2, $transparence3:0.12) {
    box-shadow: 0 #{$level}px #{$level}px 0 rgba(0,0,0,$transparence1),0 3px 1px -2px rgba(0,0,0,$transparence2),0 1px 5px 0 rgba(0,0,0,$transparence3);
}

header[data-focus='header'] {
    @include shadow();
    background-color: #FFF;
    position: relative;
    & > nav {
        [data-focus='header-bar'] {
            position: relative;
            display: flex;
            justify-content: space-between;
            height:$bar-menu-size;
            overflow: hidden;
            & > * {
                padding: $bar-padding-height 10px;
                background: transparent;
                overflow: hidden;
                white-space: nowrap;
                display: flex;
                align-items: center;
            }
            [data-focus='header-bar-left'] {
                flex-grow: 1;
            }
            [data-focus="header-bar-summary"] {
                flex-grow: 10;
            }
            [data-focus='header-bar-right'] {
                text-align: right;
                flex-grow: 1;
                justify-content: flex-end;
            }
        }
        [data-focus="header-bar-actions"] {
            position: absolute;
            right: 250px;
            bottom: -30px;
        }
    }

    [data-focus='header-bar-expanded'] {
        padding: 20px 50px;
    }

    &[data-is-expanded='false'] {
        margin-top: $bar-menu-size;
        & > nav {
            position: fixed;
            width: 100%;
            top: 0;
            z-index: 1000;
            [data-focus='header-bar'] {
                position: relative;
                @include shadow();
                background-color: #FFF;
            }
        }
    }
}

[data-focus="layout"] {
    &[data-menu="left"] {
        header[data-focus='header'] {
            & > nav {
                [data-focus='header-bar'] {
                    margin-left: 60px;
                }
            }
            [data-focus='header-bar-expanded'] {
                margin-left: 60px;
            }
        }
    }
}

